fixed outlined list spacing, closes #45

--- a/core/styles/all.css
+++ b/core/styles/all.css
@@ -1242,11 +1242,6 @@ main {
   margin-top: 24px;
   margin-top: 1.5rem;
 }
-.Item > .Footnotes {
-  margin-top: 0px;
-  margin-top: 0rem;
-  padding-left: 0.5in;
-}
 .Footnotes > .Item {
   padding-left: 24px;
   text-indent: -24px;
@@ -1909,11 +1904,6 @@ main {
   margin-top: 24px;
   margin-top: 1.5rem;
 }
-.Item > .Olist {
-  margin-top: 0px;
-  margin-top: 0rem;
-  padding-left: 0.5in;
-}
 /**
   * These Objects represent outlined lists with different enumeration types.
 @extends
@@ -1974,11 +1964,6 @@ main {
   margin-top: 24px;
   margin-top: 1.5rem;
 }
-.Item > .Ulist {
-  margin-top: 0px;
-  margin-top: 0rem;
-  padding-left: 0.5in;
-}
 /**
   * This Object represents an action list, which typically contains hyperlinks.
 @implements
@@ -1991,7 +1976,7 @@ main {
 @author
 : Chris Harvey
 @updated
-: 2014-05-11
+: 2014-10-22
   */
 .Alist {
   display: block;
@@ -2001,11 +1986,6 @@ main {
 :not(h1):not(.H) + .Alist {
   margin-top: 24px;
   margin-top: 1.5rem;
-}
-.Item > .Alist {
-  margin-top: 0px;
-  margin-top: 0rem;
-  padding-left: 0.5in;
 }
 .Alist > .Item {
   -webkit-transition-property: color;
@@ -2086,6 +2066,28 @@ main {
 }
 .Ilist.Ndash > .Item:not(:last-child)::after {
   content: '\0020\2013\0020';
+}
+/**
+  * This Object represents an outlined list. It is used for nested `Olist` objects, for example,
+  * to display a table of contents or document outline.
+@extends
+: .Olist
+@implements
+: .vru-top()
+@tags
+: #typography
+: #list
+@author
+: Chris Harvey
+@updated
+: 2014-12-19
+*/
+.Olist.Outline {
+  padding-left: 0.25in;
+}
+.Olist.Outline .Outline {
+  margin-top: 0px;
+  margin-top: 0rem;
 }
 /**
   * This Object represents a 'List of Prose', a list whose items consist of only paragraphs.
